<resources>
    <string name="gps_status_title">Status</string>
    <string name="gps_map_title">Map</string>
    <string name="gps_sky_title">Sky</string>
    <string name="gps_accuracy_title">Accuracy</string>
    <string name="timer_service_name">GPS Monkey Logger</string>
    <string name="data_saved_location">Data saved in </string>
    <string name="notification">GPS Monkey is collecting data...</string>
    <string name="notification_remote">GPS Monkey is listening for remote data...</string>
    <string name="notification_historical">GPS Monkey is reviewing old data...</string>
    <string name="quit_GPSMonkey">Quit GPS Monkey?</string>
    <string name="quit_GPSMonkey_narrative">Do you want to shutdown GPS Monkey or do you want  GPS Monkey to keep collecting data in the background?</string>
    <string name="quit_yes">Shutdown</string>
    <string name="quit_run_in_background">Run in background</string>
    <string name="does_not_support_battery_optimization">This device does not support battery optimization.</string>
    <string name="enable_battery_optimization">Settings adjustment recommended</string>
    <string name="battery_optimizations_narrative">Can I turn off battery optimization for GPS Monkey? This will allow better updates from sensors but will drain the battery a bit more.</string>
    <string name="battery_optimize_yes">Ok</string>
    <string name="navdrawer_separator_assist_data">Modify assist data</string>
    <string name="force_xtra_injection">Inject XTRA data</string>
    <string name="force_time_injection">Inject time data</string>
    <string name="delete_aiding_data">Clear assist data</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_help">Help</string>
    <string name="navdrawer_item_send_feedback">Send feedback</string>
    <string name="navdrawer_item_open_source">Visit us on GitHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="gps_start">Start</string>
    <string name="gps_pause">Pause</string>
    <string name="delete_aiding_data_success">Successfully deleted assist data.</string>
    <string name="delete_aiding_data_failure">Device does not support deleting assist data.
    </string>
    <string name="gps_switch">Off/On</string>
    <string name="share">Share</string>
    <string name="copied_to_clipboard">Location copied to clipboard</string>
    <string name="send_log">"Send log…"</string>
    <string name="log_instructions">Enable logging for NMEA, raw measurements, navigation messages, and more in Settings</string>
    <string name="no_location">Try sharing your location after getting a GNSS fix</string>
    <string name="include_altitude">Include altitude</string>
    <string name="set_fix_frequency">Set Fix Frequency</string>
    <string name="force_time_injection_success">Successfully injected time data.</string>
    <string name="force_time_injection_failure">Device does not support injecting time data.
    </string>
    <string name="force_xtra_injection_success">Successfully injected XTRA data.</string>
    <string name="force_xtra_injection_failure">Device does not support injecting XTRA data.
    </string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="mode_map">Map</string>
    <string name="mode_satellite">Satellite</string>
    <string name="gps_latitude_label">Lat:</string>
    <string name="gps_longitude_label">Long:</string>
    <string name="gps_fix_time_label">Time:</string>
    <string name="gps_ttff_label">TTFF:</string>
    <string name="gps_altitude_label">Alt:</string>
    <string name="gps_altitude_msl_label">Alt (MSL):</string>
    <string name="gps_accuracy_label">E Acc:</string>
    <string name="gps_hor_and_vert_accuracy_label">E H/V Acc:</string>
    <string name="gps_speed_label">Speed:</string>
    <string name="gps_speed_acc_label">S. Acc:</string>
    <string name="gps_bearing_label">Bearing:</string>
    <string name="gps_bearing_acc_label">B. Acc:</string>
    <string name="gps_num_sats_label"># Sats:</string>
    <string name="pdop_label">PDOP:</string>
    <string name="hvdop_label">H/V DOP:</string>
    <string name="gps_prn_column_label">ID</string>
    <string name="gnss_flag_image_label">GNSS</string>
    <string name="sbas_flag_image_label">SBAS</string>
    <string name="gps_carrier_column_label">CF</string>
    <string name="gps_snr_column_label">SNR</string>
    <string name="gps_cn0_column_label">C/N0</string>
    <string name="gps_avg_cn0_label">Avg</string>
    <string name="gps_elevation_column_label">Elev</string>
    <string name="gps_azimuth_column_label">Azim</string>
    <string name="gps_flags_column_label">Flags</string>
    <string name="gps_not_supported">Please check system settings - device doesn\'t seem to support GNSS/GPS.</string>
    <string name="install">Install</string>
    <string name="no_thanks">No thanks</string>
    <string name="please_install_google_maps">The Map tab requires Google Maps</string>
    <string name="enable_gps_message">GPS/GNSS is disabled. Enable it now?</string>
    <string name="enable_gps_positive_button">Enable GPS/GNSS</string>
    <string name="enable_gps_negative_button">No</string>
    <string name="gps_set_location_listener">Started GNSS with interval = %1$ss, min. dist. = %2$sm
    </string>
    <string name="clear_assist_warning_title">Delete assist data?</string>
    <string name="clear_assist_warning">Some devices may take 24 hours to auto-refresh assist data.  If your device doesn\'t support manual injection, GNSS may not work for any app until the auto-refresh completes. Are you sure?</string>
    <string name="never_ask_again">Never ask again</string>
    <string name="qr_code_instructions_title">Scan a QR Code</string>
    <string name="qr_code_instructions_text">Import a ground truth location using a QR Code in the Geo URI format (geo:28.38434,-87.24334).  Create your own QR Codes at https://zxing.appspot.com/generator/.</string>
    <string name="qr_code_cannot_read_code">Couldn\'t read a Geo URI from the QR code</string>
    <string name="never_show_again">Never show again</string>
    <string name="not_now">Not now</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="gnss_not_available">Global Navigation Satellite System (GNSS) satellites not available</string>
    <string name="sbas_not_available">Satellite-based Augmentation System (SBAS) satellites not available</string>
    <string name="menu_option_sort_by">Sort by</string>
    <string name="ground_truth_latitude">Your latitude</string>
    <string name="ground_truth_longitude">Your longitude</string>
    <string name="ground_truth_altitude">Your altitude in WGS84 (Optional)</string>
    <string name="set_ground_truth_title">Measure accuracy</string>
    <string name="set_ground_truth_subtitle">Tap on map or type your real location</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="ground_truth_marker_title">Your real location</string>
    <string name="ground_truth_invalid_location_title">Invalid location</string>
    <string name="ground_truth_invalid_lat">Latitude must be in decimal degrees between -90 and 90</string>
    <string name="ground_truth_invalid_long">Longitude must be in decimal degrees between -180 and 180</string>
    <string name="ground_truth_invalid_alt">Altitude must be in WGS84 in meters</string>
    <string name="horizontal_error_title">Horizontal Error</string>
    <string name="vertical_error_title">Vertical Error</string>
    <string name="horizontal_error_label">Error</string>
    <string name="measured_error_graph_label">Measured error</string>
    <string name="estimated_accuracy_graph_label">Accuracy estimated by hardware</string>
    <string name="horizontal_vertical_error_label">H/V Error</string>
    <string name="avg_error_label">avg %1$d fixes</string>
    <string name="fix_number">Fix #</string>
    <string name="show_radar_valid_location">Ground truth location imported!</string>
    <string name="show_radar_invalid_location">The imported ground truth location is invalid</string>
    <string name="sky_legend_title">Legend</string>
    <string name="sky_legend_shape_gnss_title">Global Navigation Satellite Systems (GNSS)</string>
    <string name="sky_legend_shape_navstar">NAVSTAR GPS (USA)</string>
    <string name="sky_legend_shape_glonass">GLONASS (Russia)</string>
    <string name="sky_legend_shape_galileo">Galileo (European Union)</string>
    <string name="sky_legend_shape_qzss">QZSS (Japan)</string>
    <string name="sky_legend_shape_beidou">BeiDou/COMPASS (China)</string>
    <string name="sky_legend_shape_irnss">IRNSS (India)</string>
    <string name="sky_legend_shape_sbas_title">Satellite-based Augmentation Systems (SBAS)</string>
    <string name="sky_legend_shape_waas">WAAS (USA)</string>
    <string name="sky_legend_shape_egnos">EGNOS (European Union)</string>
    <string name="sky_legend_shape_gagan">GAGAN (India)</string>
    <string name="sky_legend_shape_msas">MSAS (Japan)</string>
    <string name="sky_legend_shape_sdcm">SDCM (Russia)</string>
    <string name="sky_legend_shape_snas">SNAS (China)</string>
    <string name="sky_legend_shape_saccsa">SACCSA (ICAO)</string>
    <string name="sky_legend_shape_availability_title">Signal Availability</string>
    <string name="sky_legend_shape_not_in_view">Not in view of device</string>
    <string name="sky_legend_shape_in_view">In view</string>
    <string name="sky_legend_shape_used_in_fix">Used in fix</string>
    <string name="gnss_nav_msg_status_loc_disabled">GNSS provider or Location is disabled, no updates until it\'s enabled</string>
    <string name="gnss_nav_msg_status_not_supported">Device does not support tracking of GNSS Navigation Messages</string>
    <string name="gnss_nav_msg_status_ready">GNSS Navigation Messages are successfully being tracked</string>
    <string name="gnss_measurement_status_loc_disabled">GNSS provider or Location is disabled, no updates until it\'s enabled</string>
    <string name="gnss_measurement_status_not_supported">Device does not support tracking of GNSS Measurements</string>
    <string name="gnss_measurement_status_ready">GNSS Measurements are successfully being tracked</string>
    <string name="gnss_status_unknown">Unknown status callback</string>
    <string name="title_location_permission">Need location permission</string>
    <string name="text_location_permission">GPS Monkey needs access to your location to show GNSS data. If you select \"Never ask again\" you will need to reinstall the app or enable permissions via system settings.</string>
    <string name="ok">OK</string>
    <string name="exit">EXIT</string>
    <string name="feedback_subject">GPS Monkey: Feedback</string>
    <string name="feedback_body">Complaints, kudos, or bug reports are welcome!\n\n\n</string>
    <string name="feedback_error">Unable to send feedback: no suitable application found.
    </string>
    <string name="not_supported_title">GPS Monkey may not work.</string>
    <string name="not_supported_description">GPS Monkey is not receiving raw GNSS measurements from the phone, which are required for generating GeoPackage files with useful data. You will still see some satellite status in the app, but any GeoPackage files generated by GPS Monkey will only contain basic location information. For more information and a list of devices that support raw GNSS, consult Android\'s <a href="https://developer.android.com/guide/topics/sensors/gnss">Raw GNSS Measurements</a> guide.</string>
    <string name="remember_my_decision">Don\'t ask me again</string>
    <string name="use_anyway">Use anyway</string>
    <string name="uninstall">Uninstall</string>
</resources>